<resources>
    <string name="app_name">Chat Now</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="g_don_t_have_an_account_sign_up">Don\'t have an account? sign up</string>
    <string name="g_do_you_have_an_account_sign_in">Do you have an account? sign in</string>
    <string name="last_name">Last Name</string>
    <string name="g_first_name">First Name</string>
    <string name="create_account">Create Account</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="username">Username</string>
    <string name="sign_up">Create Account</string>

</resources>