<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_register">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.chatapp.ui.register.RegisterViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.register.RegisterActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".26" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/guideline">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameRegister_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/username"
                app:Error="@{vm.userNameError}">


                <EditText
                    android:id="@+id/userNameRegister_edt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="text"
                    android:padding="10dp"
                    android:text="@={vm.userName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/email"
                app:Error="@{vm.emailError}">


                <EditText
                    android:id="@+id/email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:text="@={vm.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/password"
                app:Error="@{vm.passwordError}">

                <EditText
                    android:id="@+id/password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:text="@={vm.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_confirmation_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/password_confirmation"
                app:Error="@{vm.passwordConfirmationError}">

                <EditText
                    android:id="@+id/password_confirmation_edt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:text="@={vm.passwordConfirmation}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvDoHaveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="@{()->vm.navigateToLogin()}"
                android:padding="4dp"
                android:text="@string/g_do_you_have_an_account_sign_in"
                android:textSize="16sp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/blue"
                android:clickable="@{vm.isLoading()?false:true}"
                android:drawableEnd="@drawable/ic_next"
                android:onClick="@{()->vm.register()}"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next"
                    android:visibility="@{vm.isLoading?View.GONE:View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/white"
                    android:src="@drawable/ic_next"
                    android:visibility="@{vm.isLoading?View.VISIBLE:View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>